--- a/style.css
+++ b/style.css
@@ -84,3 +84,17 @@ footer {
   from { opacity: 0; }
   to { opacity: 1; }
 }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
